--- a/404.html
+++ b/404.html
@@ -1,1 +1,10 @@
-Sorry this page does not exist =(
+---
+layout: page
+title : Error
+---
+{% include JB/setup %}
+
+<h1><center>Oops ! <br/>Page NOT FOUND. <br/><br/><br/>This means that the page you are trying to access does not exist in reality. Please try another page.</center></h1>
+
+
+
